--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,5 @@
 <div class="d-flex">
-  <aside class="bg-dark boder-right p-3" id="sidebar">
-    <h3 class="text-light text-center">Gifs-App</h3>
-    <hr class="text-white" />
-    <div class="list-group list-reset">
-      <a href="#" class="list-group-item list-group-item-action">Dashboard</a>
-    </div>
-  </aside>
+  <app-sidebar></app-sidebar>
 
   <div class="container">
     <div class="row p-3">
@@ -14,7 +8,9 @@
         <input type="text" class="form-control" placeholder="Buscar gifs..." />
       </div>
     </div>
+
     <hr />
+
     <div class="row">
       <div class="col">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias in
