:art: GifModule y sus componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,4 @@
 <div class="d-flex">
   <app-sidebar></app-sidebar>
-
-  <div class="container">
-    <div class="row p-3">
-      <div class="col">
-        <h3>Buscar:</h3>
-        <input type="text" class="form-control" placeholder="Buscar gifs..." />
-      </div>
-    </div>
-
-    <hr />
-
-    <div class="row">
-      <div class="col">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias in
-        sapiente animi. Itaque ratione fugit libero illo optio ducimus
-        laboriosam, eligendi molestias quas hic dolore nobis dolor? Dolore,
-        laudantium praesentium.
-      </div>
-    </div>
-  </div>
+  <app-gifs-page class="container"></app-gifs-page>
 </div>
