--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,6 +2,11 @@
   <h3 class="text-light text-center">Gifs-App</h3>
   <hr class="text-white" />
   <div class="list-group list-reset">
-    <a href="#" class="list-group-item list-group-item-action">Dashboard</a>
+    <a
+      *ngFor="let busqueda of historial"
+      href="#"
+      class="list-group-item list-group-item-action"
+      >{{ busqueda }}</a
+    >
   </div>
 </aside>
