:art: Controlar el historial de búsquedas

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
       *ngFor="let busqueda of historial"
       href="#"
       class="list-group-item list-group-item-action"
-      >{{ busqueda }}</a
+      >{{ busqueda | titlecase }}</a
     >
   </div>
 </aside>
